--- a/src/main/resources/messages_de_DE.properties
+++ b/src/main/resources/messages_de_DE.properties
@@ -27,7 +27,7 @@ home.desc=Ihr lokal gehosteter One-Stop-Shop für alle Ihre PDF-Anforderungen.
 
 navbar.convert=Konvertieren
 navbar.security=Sicherheit
-navbar.other=Anderes
+navbar.other=Sonstiges
 navbar.darkmode=Dark Mode
 navbar.pageOps=Seitenoperationen
 
@@ -53,7 +53,7 @@ home.pdfOrganiser.title=Organisieren
 home.pdfOrganiser.desc=Seiten entfernen und Seitenreihenfolge ändern.
 
 home.addImage.title=Bild einfügen
-home.addImage.desc=Fügt ein Bild an eine bestimmte Stelle im PDF ein (Work in progress).
+home.addImage.desc=Fügt ein Bild an eine bestimmte Stelle im PDF ein (in Entwicklung).
 
 home.watermark.title=Wasserzeichen hinzufügen
 home.watermark.desc=Fügen Sie ein eigenes Wasserzeichen zu Ihrem PDF hinzu.
@@ -107,7 +107,7 @@ home.PDFToXML.title=PDF in XML
 home.PDFToXML.desc=PDF in XML-Format konvertieren
 
 home.ScannerImageSplit.title=Gescannte Fotos erkennen/aufteilen
-home.ScannerImageSplit.desc=Teilt mehrere Fotos innerhalb eines Fotos/PDF
+home.ScannerImageSplit.desc=Teilt mehrere Fotos innerhalb eines gescannten Fotos/PDFs
 
 home.sign.title=Signieren
 home.sign.desc=Fügt PDF-Signaturen durch Zeichnung, Text oder Bild hinzu
@@ -123,6 +123,12 @@ home.removeBlanks.desc=Erkennt und entfernt leere Seiten aus einem Dokument
 
 home.compare.title=Vergleichen
 home.compare.desc=Vergleicht und zeigt die Unterschiede zwischen zwei PDF-Dokumenten an
+
+home.certSign.title=Mit Zertifikat signieren
+home.certSign.desc=Signiert ein PDF mit einem Zertifikat/Schlüssel (PEM/P12)
+
+home.pageLayout.title=Multi-Page Layout
+home.pageLayout.desc=Mehrere Seiten eines PDF zu einer Seite zusammenfügen
 
 downloadPdf=PDF herunterladen
 text=Text
